# Pirouette-Compiler

./: .gitignore  Makefile  README.md
Haschor-Program/: CHANGELOG.md  main.hi
Haschor-Program/Ethan-Program/: Main.hs
Haschor-Program/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
UB_CSE302_testcases/: Buyer_Seller.hs  carkey.hs  heartrate.hs
UB_CSE302_testcases/wireless_car_key/: HasChor.cabal  carkey.hs
UB_CSE302_testcases/wireless_car_key/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
app/: LICENSE  app.cabal
app/app/: Main.hs
app/dist-newstyle/cache/: config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  metainfo_tests.txt
examples/haschor/: buyer_seller.hs
examples/haschor/test-wireless-carkey/: .gitignore  (+2 more)
lib/ast/: choreo.ml  choreo_dot.ml  choreo_pp.ml  dune  interface.ml  interface.mli  local.ml  local_dot.ml  local_pp.ml
lib/ast_core/: choreo.ml  choreo.mli
lib/ast_utils/: ast_locs.ml  ast_utils.ml  choreo_dot.ml  jsonify_ast.ml  local_dot.ml  pprint_ast.ml
lib/parsing/: interface.ml  lexer.mll  parser.mly
lib/pirouettedot/: dune  interface.ml  interface.mli
lib/prettyprint/: dune  interface.ml  interface.mli
lib/typing/: typ_infer.ml  typ_infer.mli
test/: astutils_testcases.ml  dotgraph_test.ml  dune  parsing_test.ml  prettyprint_test.ml  testcases.ml  typcheck_test.ml
testing/: pingpongtwo.hs
testing/app/: pingpong.hs
(+160 files in other folders)
