cabal-version:      2.4
name:               carkey
version:            0.1.0.0
synopsis:           Functional choreographic programming in Haskell
category:           Concurrency
description:
    use HasChor to implement a wireless car key system

tested-with:
    GHC == 9.8.1

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/gshen42/HasChor

source-repository this
    type:     git
    location: https://github.com/gshen42/HasChor
    tag:      v0.1.0.1

library
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
        Choreography
        Choreography.Choreo
        Choreography.Location
        Choreography.Network
        Choreography.Network.Http
        Choreography.Network.Local
        Control.Monad.Freer
    build-depends:
        , base                 >= 4.16 && < 4.20
        , bytestring           >= 0.11 && < 0.13
        , http-client          >= 0.7  && < 0.8
        , servant              >= 0.19 && < 0.21
        , servant-client       >= 0.19 && < 0.21
        , servant-server       >= 0.19 && < 0.21
        , template-haskell     >= 2.18 && < 2.22
        , unordered-containers >= 0.2  && < 0.3
        , warp                 >= 3.3  && < 3.4

executable carkey
    main-is:          carkey.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13
